OPR-332: Add molecular criteria generation